# helicopter_game

./: .gitignore  README.md  leaderboard.json  pyproject.toml  requirements.txt  run_game.py
config/: leaderboard.json  settings.json
game/: enemy.py  gameover.py  leaderboard.py  main.py  menu.py  pausemenu.py  player.py  settings.py  ui.py  world.py
