[project]
name = "pygame_game"
version = "0.1.0"
description = "A simple game built with Pygame"
authors = [
    { name="Your Name", email="you@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pygame>=2.0.0"
]

[project.scripts]
play-game = "game.main:run"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
